# Descension

./: Cargo.toml  README.md
assets/config/: player.ron
assets/dialogue/: dialogue.ron
src/: dialogue.rs  dialogue_generator.py  main.rs
